:trophy: Day 068/100 - Done

--- a/day056/challenge/static/assets/sass/base/_page.scss
+++ b/day056/challenge/static/assets/sass/base/_page.scss
@@ -20,7 +20,7 @@
 	body {
 
 		// Prevents animation/transition "flicker" on page load.
-		// Automatically added/removed by js/main.js.
+		// Automatically added/removed by js/main.py.js.
 			&.is-loading {
 				*, *:before, *:after {
 					@include vendor('animation', 'none !important');
